# esp32c3-devkit-demo

./: Cargo.toml  README.md  wokwi.toml
examples/: ambient.rs  button.rs  imu.rs  led.rs
src/: ambient.rs  ble.rs  bsp.rs  buttons.rs  imu.rs  led.rs  lib.rs  main.rs
src/ble/: gatt.rs  notify.rs
