[package]
edition = "2024"
name = "esp32c3-devkit-demo"
version = "0.1.0"

[dependencies]
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
log = { version = "0.4.21" }
critical-section = "1.2.0"

esp-backtrace = { version = "0.15.0", features = [
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "0.23.1", features = ["unstable"] }
esp-println = { version = "0.13.0", features = ["log"] }

heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0" }

embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.6.0", features = [] }
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.0"

# RGB LED Stuff
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git" }

# I2c Peripherals
icm42670 = "0.2.0"
shtcx = "1.0.0"

# BLE stuff
esp-alloc = { version = "0.6.0" }
esp-wifi = { version = "0.12.0", default-features = false, features = [
  "ble",
  "esp-alloc",
  "log",
] }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = [
  "gatt",
  "log",
] }
bt-hci = { version = "0.2.0", features = ["log"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = ["esp32c3"]
esp32c3 = [
  "esp-backtrace/esp32c3",
  "esp-hal/esp32c3",
  "esp-println/esp32c3",
  "esp-wifi/esp32c3",
  "esp-hal-embassy/esp32c3",
]
