[package]
edition = "2024"
name = "esp32c3-devkit-demo"
version = "0.1.0"

[dependencies]
# HAL stuff
esp-hal = { version = "^1.0.0-beta.0", features = ["unstable", "log"] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
critical-section = "1.2.0"

# Logging
esp-println = { version = "0.13.1", features = ["log"] }
log = { version = "0.4.27" }
esp-backtrace = { version = "0.15.1", features = [
  "exception-handler",
  "panic-handler",
  "println",
] }

# Misc stuff
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0" }
ector = { version = "0.7.0", default-features = false }

# Embassy stuff
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = [] }
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.0"
embassy-futures = "0.1.1"

# RGB LED stuff
smart-leds = "0.4.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git" }

# I2c Peripherals
shtcx = "1.0.0"      # SHTC3 temperature and humidity sensor
icm42670 = "0.2.0"   # ICM42670 IMU
imu-fusion = "0.2.5"
micromath = "2.1.0"

# BLE stuff
esp-alloc = { version = "0.7.0" }
esp-wifi = { version = "0.13.0", default-features = false, features = [
  "ble",
  "esp-alloc",
  "builtin-scheduler",
  "log",
] }
trouble-host = { version = "0.1.0", features = ["gatt", "log"] }
bt-hci = { version = "0.2.1", features = ["log"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = ["esp32c3"]
esp32c3 = [
  "esp-backtrace/esp32c3",
  "esp-hal/esp32c3",
  "esp-println/esp32c3",
  "esp-wifi/esp32c3",
  "esp-hal-embassy/esp32c3",
]
